TheKabal (27 January 2013)
--------------------------------------
Moved plugins from classes/ to vendor/, all classes now belong under vendor!
Fixed psr-0 compliance for vendor/bnt/sectorDefense.php
Fixed typo in variable assignment in admin preventing access to admin panel
Replaced global status for benchmark timer for now
Ran php coding standards fixer ( http://cs.sensiolabs.org/ ) to get us closer to consistent/compliant with most of PSR. 
php-cs-fixer fix . --fixers=linefeed,short_tag,indentation,trailing_spaces,unused_use,short_tag,return,extra_empty_lines,include,controls_spaces,elseif,visibility,phpdoc_params,eof_ending
Cleaned up and re-implemented the timer class as an autoloaded class in our vendor directory

TheMightyDude (30 January 2013)
--------------------------------------
PluginSystem: Moved $GLOBALS over to an Internal Static Variable.
Removed the EventSystem class etc due to it was using the one built into the PluginSystem.

TheKabal (27 January 2013)
--------------------------------------
Moved almost everything from classes to vendor, almost everything using composer autoloader now

TheMightyDude (26 January 2013)
--------------------------------------
Fixed typo bug in admin.php

TheKabal (26 January 2013)
--------------------------------------
Switching IGB_transfer to ibank_transfer, for consistency.
Create universe cannot create a schema with a key that is varchar 512 because of a limitation in mysql. As a result, we cannot use session compression and encryption.
Added composer to BNT, which gives the ability to add third-party libraries that are PSR0 compatible. It will also (soon) serve as our auto-loader.
Change the way admin checks the admin password

TheMightyDude (26 January 2013)
--------------------------------------
Disabled Template System Module due to exploit...

TheKabal (20 January 2013)
--------------------------------------
Replaced variables in language files with [placeholder] text that is replaced with variables.
